# cit

./: .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  README.md  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  stock.db
.cursor/rules/: back.mdc  front.mdc
src/app/: main.py
src/app/config/: base.py  config.py  constraints.py
src/app/database/: __init__.py
src/app/database/migrations/versions/: 2025-02-11_first_create_tables_7751a1c9e3fc.py  2025-02-16_created_equipments_asignment_number_8f45dad9fd37.py
src/app/database/models/: __init__.py  base.py  custom_types.py  documents.py  equipments.py
src/app/database/models/reference_book/: __init__.py  departments.py  employees.py  equipment_names.py
src/app/domain/documents/: controller.py  dependencies.py  dto.py  repository.py  service.py  urls.py
src/app/domain/equipments/: dependencies.py  dto.py  repository.py  schema.py  service.py  urls.py
src/app/domain/equipments/controllers/: __init__.py  controller_api.py  controller_web.py
src/app/domain/reference_book/: __init__.py
src/app/server/: builder.py  plugins.py  routers.py
src/app/static/css/: tailwind.css
src/app/templates/components/: system_metrics.html
src/app/templates/equipment/: form.html  list.html
src/app/templates/layouts/: base.html
src/app/templates/pages/: main_page.html  main_page_content.html
src/app/templates/partials/: footer.html  head.html  header.html  logo.html  nav_items.html
src/app/templates/reference_book/: select_template.html
src/stocktaking/: __init__.py
(+44 files in other folders)
