[project]
name = "stocktaking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavlenko_D", email = "Apofeoz@tut.by" }
]
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=0.26.2",
    "jinja2>=3.1.5",
    "litestar>=2.13.0",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
stocktaking = "stocktaking:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/stocktaking"]
