[project]
name = "stocktaking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavlenko_D", email = "Apofeoz@tut.by" }
]
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=0.26.2",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.5",
    "litestar>=2.13.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[project.scripts]
stocktaking = "stocktaking:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = "src"

[project.optional-dependencies]
dev = [
    "black==23.10.0",
    "ruff==0.1.3",
    "mypy==1.6.1",
    "pre-commit==3.5.0",
]
